styles the about section to prevent overlap with other elements

--- a/src/styling/About.scss
+++ b/src/styling/About.scss
@@ -1,14 +1,18 @@
 div .about{
     height: 100vh;
+    min-height: 500px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
+    
     div {
         display:flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         max-width: 100vw;
+        margin-bottom: 10px;
         div{
             
             height: 300px;
